      - child node of towny.command.townyadmin.nation.*
  - Add save method to Towny objects, courtesy of silverwolfg11 with PR #4670.
0.96.5.14:
  - Added Placeholder: %townyadvanced_nation_map_color_hex%, courtesy of Kovalskki with PR #4661.
    - returns the hex colour code of the nation's mapcolor set with /t set mapcolor (seen in dynmap-towny.)
  - es-419.yml updated to 0.97, courtesy of EuGNosii with PR #4675.
  - Fix friendly-fire-disabled message not being sent via TownyMessaging.
  - Fix PreNationEvent cancellation message, courtesy of Warriorrrr with PR #4676.
  - Fix [Not For Sale] being seen when walking into the wilderness from a forsale plot.
  - Fix renamed nations not accepting valid names when there is no cost to change the name.
  - Fix explosive crossbow damage not being considered pvp.
  - Replace calls to TownySettings.isUsingEconomy() with TownyEconomyHandler.isActive().
    - Should stop errors appearing when the economy on the server is not set up properly.
0.96.5.15:
  - API: add cancellationMsg to PlotToggleEvents.
  - Add PVP cooldown to setting and unsetting the Arena plot type.
  - Add tab-completion to /t add.
    - Tab-completion shows only online, town-less players.
    - Closes #4674.
  - Fix health regen task not healing.
    - Closes #4682.
  - Fix the ability for the economy plugin to prevent a town and nation from being renamed.
  - Fix NotRegisteredException thrown via EventWar.
  - Fix townless players not being able to pvp in EventWar when towns_are_neutral is false.
  - Fix /res tax command being pretty useless.
  - Fixed Conquered Flag not changing when town leaves nation, courtesy of Goosius1 with PR #4689.
  - Change the lang string for the (Conquered) town status screen to (Occupied).
    - Closes #4688.
0.96.6.0:
  - Bump version for release.
0.96.6.1:
  - Prevent deaths by crossbow suicide from awarding death payments.
  - Assign the correct UUID to players who have somehow gotten a previous UUID stored.