@@ -5748,3 +5748,5 @@ v0.92.0.11:
 0.96.6.1:
   - Prevent deaths by crossbow suicide from awarding death payments.
   - Assign the correct UUID to players who have somehow gotten a previous UUID stored.
+  - Fix admin bankhistory commands.
+    - Closes #4701.
